--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "^3.0.1",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.49.8",
     "web-vitals": "^2.1.4"
   },
